# bnss

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
bnss/: bot.py  helpers.py  logger.py  main.py  settings.py
bnss/cogs/: __init__.py  events.py  voice.py
