[tool.poetry]
name = "bnss"
version = "0.2.0"
description = "Music bot for Discord written in Python"
authors = ["atbuy <atbuy@atbuy.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = {version = "2.4.0", extras = ["voice"]}
pydantic-settings = "2.6.1"
yt-dlp = "2024.11.4"


[tool.poetry.group.dev.dependencies]
ruff = "0.7.3"
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
