[tool.poetry]
name = "bnss"
version = "0.2.3"
description = "Music bot for Discord written in Python"
authors = ["atbuy <atbuy@atbuy.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = {version = "2.5.2", extras = ["voice"]}
pydantic-settings = "2.9.1"
yt-dlp = "2025.6.9"


[tool.poetry.group.dev.dependencies]
ruff = "0.11.7"
pre-commit = "4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
