[tool.poetry]
name = "bnss"
version = "1.0.1"
description = "Music bot for Discord written in Python"
authors = ["atbuy <atbuy@atbuy.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = {version = "2.6.3", extras = ["voice"]}
pydantic-settings = "2.10.1"
yt-dlp = "2025.9.5"


[tool.poetry.group.dev.dependencies]
ruff = "0.12.12"
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
